deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inrule-runtime-deployment
spec:
  selector:
    matchLabels:
      app: inrule-runtime
  replicas: 1
  template:
    metadata:
      labels:
        app: inrule-runtime
    spec:
      containers:
      - name: inrule-runtime
        image: inrule/inrule-runtime:0.0.1
        ports:
        - containerPort: 8080
