service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inrule-runtime-service
spec:
  selector:
    app: inrule-runtime
  ports:
    - port: 8080
      targetPort: 8080
