route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name:inrule-runtime-route
spec:
  to:
    kind: Service
    name: inrule-runtime-service
  port:
    targetPort: 8080
